<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161616"
    tools:context=".ui.settings.settingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Status_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="5dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#282828">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:text="@string/status"
                    android:textColor="@color/pedocorecolor"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.05"
                    app:layout_constraintWidth_percent="0.5"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintVertical_bias="0.04"/>
                <TextView
                    android:id="@+id/bvm_tv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:gravity="start|center"
                    android:textAllCaps="true"
                    android:text="@string/bvm"
                    android:textColor="@color/colorSecondPrimaryDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.04"
                    app:layout_constraintWidth_percent="0.2"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintVertical_bias="0.15"/>
                <TextView
                    android:id="@+id/cprband_tv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:gravity="start|center"
                    android:textAllCaps="true"
                    android:text="@string/cpr_band"
                    android:textColor="@color/colorSecondPrimaryDark"
                    app:layout_constraintStart_toStartOf="@id/bvm_tv"
                    app:layout_constraintTop_toBottomOf="@id/bvm_tv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/bvm_tv"
                    app:layout_constraintWidth_percent="0.2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHeight_percent="0.04"
                    app:layout_constraintVertical_bias="0.05"/>
                <TextView
                    android:id="@+id/bvm_status"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:gravity="start|center"
                    android:layout_marginHorizontal="5dp"
                    android:textAllCaps="true"
                    android:text="@string/connected"
                    android:textColor="@color/dividerColor"
                    app:layout_constraintStart_toEndOf="@id/bvm_tv"
                    app:layout_constraintTop_toTopOf="@id/bvm_tv"
                    app:layout_constraintBottom_toBottomOf="@id/bvm_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.9" />
                <TextView
                    android:id="@+id/cprband_status"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:gravity="start|center"
                    android:layout_marginHorizontal="5dp"
                    android:textAllCaps="true"
                    android:text="@string/connected"
                    android:textColor="@color/dividerColor"
                    app:layout_constraintStart_toEndOf="@id/cprband_tv"
                    app:layout_constraintTop_toTopOf="@id/cprband_tv"
                    app:layout_constraintBottom_toBottomOf="@id/cprband_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.9" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/search_btn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/search"
                    app:layout_constraintTop_toBottomOf="@id/cprband_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintHeight_percent="0.065"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintVertical_bias="0.05"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/connect_btn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/connect"
                    app:layout_constraintTop_toTopOf="@id/search_btn"
                    app:layout_constraintStart_toEndOf="@id/search_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/search_btn"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintHorizontal_bias="0.3"
                    app:layout_constraintVertical_bias="0.1"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bvm_recyclerview"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/search_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintWidth_percent="0.5"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cpr_recyclerview"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/search_btn"
                    app:layout_constraintStart_toEndOf="@id/bvm_recyclerview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>