<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#161616"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHeight_max="200dp">

        <Button
            android:id="@+id/bvm_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/pedocorecolor"
            android:textAllCaps="true"
            android:text="@string/bvm"
            android:backgroundTint="#161616"
            android:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.335"
            app:layout_constraintHorizontal_bias="0"
            />

        <Button
            android:id="@+id/cpr_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/pedocorecolor"
            android:textAllCaps="true"
            android:text="@string/cpr"
            android:backgroundTint="#161616"
            android:autoSizeTextType="uniform"
            app:layout_constraintStart_toEndOf="@id/bvm_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.335"
            app:layout_constraintHorizontal_bias="0"
            />

        <Button
            android:id="@+id/setting_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/pedocorecolor"
            android:textAllCaps="true"
            android:text="@string/setting"
            android:backgroundTint="#161616"
            android:autoSizeTextType="uniform"
            app:layout_constraintStart_toEndOf="@id/cpr_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.335"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Status_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/buttonPanel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <include layout="@layout/fragment_bvm"
            android:id="@+id/fragment_bvm"
            android:visibility="visible"/>

        <include layout="@layout/fragment_cpr"
            android:id="@+id/fragment_cpr"
            android:visibility="invisible"/>

        <include layout="@layout/fragment_setting"
            android:id="@+id/fragment_setting"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>