<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161616"
    tools:context=".ui.BVM.BVMFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/graph_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.33">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/graph_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.33">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="5dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#282828">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/realtimeinfo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:text="@string/realtimeinfo"
                    android:textColor="@color/pedocorecolor"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.2"
                    app:layout_constraintWidth_percent="0.5"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintVertical_bias="0.12"/>
                <TextView
                    android:id="@+id/time_tv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/time"
                    android:textColor="@color/dividerColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.1"
                    app:layout_constraintWidth_percent="0.2"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintVertical_bias="0.45"/>
                <TextView
                    android:id="@+id/count_tv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/count"
                    android:textColor="@color/dividerColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/time_tv"
                    app:layout_constraintBottom_toBottomOf="@id/time_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_percent="0.2"
                    app:layout_constraintHorizontal_bias="0.5" />
                <TextView
                    android:id="@+id/total_tv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/total"
                    android:textColor="@color/dividerColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/time_tv"
                    app:layout_constraintBottom_toBottomOf="@id/time_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_percent="0.2"
                    app:layout_constraintHorizontal_bias="0.9" />
                <TextView
                    android:id="@+id/time_value_tv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="00:00"
                    android:textColor="@color/colorSecondPrimaryDark"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintTop_toBottomOf="@id/time_tv"
                    app:layout_constraintStart_toStartOf="@id/time_tv"
                    app:layout_constraintEnd_toEndOf="@id/time_tv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.2"
                    app:layout_constraintVertical_bias="0.1"
                    />
                <TextView
                    android:id="@+id/count_value_tv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorSecondPrimaryDark"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintTop_toBottomOf="@id/count_tv"
                    app:layout_constraintStart_toStartOf="@id/count_tv"
                    app:layout_constraintEnd_toEndOf="@id/count_tv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.2"
                    app:layout_constraintVertical_bias="0.1"
                    />
                <TextView
                    android:id="@+id/total_value_tv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorSecondPrimaryDark"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintTop_toBottomOf="@id/total_tv"
                    app:layout_constraintStart_toStartOf="@id/total_tv"
                    app:layout_constraintEnd_toEndOf="@id/total_tv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHeight_percent="0.2"
                    app:layout_constraintVertical_bias="0.1"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/speed_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/info_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="5dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#282828">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/BVM_speed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:text="@string/bvm_Speed"
                    android:textColor="@color/pedocorecolor"
                    android:textAllCaps="true"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.2"
                    app:layout_constraintVertical_bias="0.12"/>
                <com.github.anastr.speedviewlib.ProgressiveGauge
                    android:id="@+id/BVM_speed_gauge"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    app:sv_maxSpeed="100"
                    app:sv_minSpeed="0"
                    app:sv_speedTextSize="0sp"
                    app:sv_unitTextSize="0sp"
                    app:speedometerMode="line"
                    app:sv_speedometerColor="#00ff00"
                    app:sv_speedometerMode="NORMAL"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/BVM_speed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>